# helix

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.claude/agents/: evaluator.md  research-orchestrator.md  tool-designer.md
.claude/skills/algorithm-iteration/: SKILL.md
.claude/skills/business-research/: SKILL.md
.claude/skills/ml-experimentation/: SKILL.md
.claude/skills/research-loop/: SKILL.md
.claude/skills/tool-design/: SKILL.md
docs/: agent-patterns.md  experiment-schema.md  general-agent.md  runtime-scaffold.md  skill-contract.md  system-overview.md  tool-contract.md
helix/: __init__.py  agent.py  contracts.py  memory.py  models.py
helix/skills/: __init__.py  algorithm_improvement.py  base.py
helix/tools/: __init__.py  mock.py
