[project]
name = "helix"
version = "0.1.0"
description = "Reusable framework for autonomous research and experimentation"
readme = "README.md"
requires-python = ">=3.10"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["helix*"]
